force-app/main/default/objects/Commission_Event__e/Commission_Event__e.object-meta.xml
<CustomObject>
    <description>Published when pipeline record changes trigger commission-relevant events (close, amount change, stage change).</description>
    <label>Commission Event</label>
    <pluralLabel>Commission Events</pluralLabel>
</CustomObject>