force-app/main/default/objects/Commission_Event__e/fields/Change_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Change_Subtype__c</fullName>
    <description>Semantic subtype for the event. Used for product mix (LINE_ADDED, LINE_REMOVED, etc.) and rev rec (REV_REC_POSTED, etc.) events.</description>
    <label>Change Subtype</label>
    <length>50</length>
    <type>Text</type>
</CustomField>