force-app/main/default/objects/Commission_Event__e/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>DEAL_CLOSED, AMOUNT_CHANGED, STAGE_CHANGED, CLOSE_DATE_CHANGED, CATEGORY_CHANGED</description>
    <label>Event Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>