force-app/main/default/objects/Commission_Event__e/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <description>JSON of new state</description>
    <label>New Value</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>