force-app/main/default/objects/Commission_Event__e/fields/Previous_Value__c.field-meta.xml
<CustomField>
    <fullName>Previous_Value__c</fullName>
    <description>JSON of prior state</description>
    <label>Previous Value</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>