force-app/main/default/objects/Commission_Event__e/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <description>User ID</description>
    <label>User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>